# vedh1204

./: .gitignore  CNN.3.ipynb  Multi_head_attention.ipynb  PRE_LLM_concepts.ipynb  README.md  RNN.2.ipynb  Sign_lang.ipynb  Week10.ipynb  frames_2025-04-18_15.22.54.gv  frames_2025-04-18_17.49.33.gv  image_stiching.ipynb  linear_regression.ipynb  project.ipynb  rugved_night_vis.ipynb  rugved_open3d.ipynb  rugvedweek3.ipynb  rugvedweek4.ipynb  rugvedweek5.ipynb  rugvedweek6.ipynb  rugvedweek7-checkpoint.ipynb  week4.py  zero_dce_256x256.onnx  zero_dce_trained.pth
src/: combined_pointcloud.ply  frames_2025-04-18_15.22.54.gv  frames_2025-04-18_17.49.33.gv
src/astar_planner/: package.xml  setup.py
src/astar_planner/astar_planner/: astar_planner.py  map_loader.py  planner_node.py
src/astar_planner/launch/: turtlebot3_sim_launch.py
src/astar_planner/maps/: map.pgm  map.yaml  my_map.pgm  my_map.yaml
src/depth_image_saver/: package.xml  setup.cfg  setup.py
src/my_slam/launch/: rtab_slam.launch.py
src/pcd_publisher/: package.xml  setup.cfg  setup.py
src/trial_2/: model.config  model.sdf
src/vedh_gazebo/: CMakeLists.txt  astar_path_planner.py  package.xml  setup.py
src/vedh_gazebo/launch/: custom_world.launch.py  view_pointcloud.launch.py
src/vedh_gazebo/resource/: vedh_gazebo
src/vedh_gazebo/urdf/: pointcloud_bot.urdf
src/vedh_gazebo/worlds/: custom_world.world  turtle_world
